set white background for whole page

--- a/epgen/templates/error.html
+++ b/epgen/templates/error.html
@@ -8,6 +8,7 @@
                 font-family:Sans-serif;
                 text-align:center;
                 user-select:none;
+                background-color:white;
             }
             #content {
                 position: absolute;
